Setup CI (#4)
* Setup CI

* Fixed deps (#3)

Co-authored-by: d.rodkin <d.rodkin@tinkoff.ru>

* Upload front artifact

* Build scala

* Fix pull request template

* Use focal image

* Install unzip via apt

* Adjust docker settings

* Build native image

Co-authored-by: Dmitriy <metastasis@protonmail.ch>
Co-authored-by: d.rodkin <d.rodkin@tinkoff.ru>